Actualización: mejoras y cambios en grids, navbar y títulos

--- a/index.html
+++ b/index.html
@@ -108,37 +108,25 @@
                 <h3>Gotoubun no Hanayome</h3>
             </div>
             <div class="anime-item">
-                <img src="images/" alt="">
-                <h3></h3>
+                <img src="images/shin no nakama janai to yuusha.png" alt="shin no nakama janai to yuusha">
+                <h3>shin no nakama janai to yuusha</h3>
             </div>
             <div class="anime-item">
-                <img src="images/" alt="">
-                <h3></h3>
+                <img src="images/arifureta shokugyou de sekai saikyou.png" alt="arifureta shokugyou de sekai saikyou">
+                <h3>arifureta shokugyou de sekai saikyou</h3>
             </div>
             <div class="anime-item">
-                <img src="images/" alt="">
-                <h3></h3>
+                <img src="images/Zero no Tsukaima.jpg" alt="Zero no Tsukaima">
+                <h3>Zero no Tsukaima</h3>
             </div>
             <div class="anime-item">
-                <img src="images/" alt="">
-                <h3></h3>
+                <img src="images/no game no life.png" alt="No Game no Life">
+                <h3>No Game no Life</h3>
             </div>
             <div class="anime-item">
-                <img src="images/" alt="">
-                <h3></h3>
-            </div>
-            <div class="anime-item">
-                <img src="images/" alt="">
-                <h3></h3>
-            </div>
-            <div class="anime-item">
-                <img src="images/" alt="">
-                <h3></h3>
-            </div>
-            <div class="anime-item">
-                <img src="images/" alt="">
-                <h3></h3>
-            </div>            
+                <img src="images/rokudenashi majutsu koushi to akashic records.jpg" alt="Rokudenashi Majutsu to Akashic Records">
+                <h3>Rokudenashi Majutsu to Akashic Records</h3>
+            </div>           
         </div>
     </section>
 
