--- a/login/login.html
+++ b/login/login.html
@@ -62,7 +62,7 @@
             <h5>¿No tienes cuenta? <a href="../register/register.html">Regístrate aquí</a></h5>
             <br>
             <!-- captcha -->
-            <div class="g-recaptcha" data-sitekey="TU_SITE_KEY" style="align-items: center;" required></div>
+            <div class="g-recaptcha" data-sitekey="6LchoHUrAAAAAG8-jLHTHZheY5djH-CXBu6yxGJw" style="align-items: center;" required></div>
             <br>
             <button type="submit">Entrar</button>
         </form>
