--- a/register/register.html
+++ b/register/register.html
@@ -58,7 +58,7 @@
             <br>
             <br>
             <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-            <div class="g-recaptcha" data-sitekey="TU_SITE_KEY" required></div>
+            <div class="g-recaptcha" data-sitekey="6LchoHUrAAAAAG8-jLHTHZheY5djH-CXBu6yxGJw" required></div>
             <br>
             <h5> ya tienes cuenta? <a href="../login/login.html">Inicia Sesión</a></h5>
             <br>
