--- a/register/register.html
+++ b/register/register.html
@@ -6,30 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Cuenta</title>
     <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
 
 <body>
-    <div id="navbar-container"></div>
-    <script>
-        fetch("../navbar.html")
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("navbar-container").innerHTML = data;
-            })
-            .catch(error => console.error("Error al cargar la navbar:", error));
-    </script>
-    <header>    </header>
+    <nav class="navbar navbar-inverse" oncopy="return false" oncut="return false" onpaste="return false"
+        onselectstart="return false">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">I<text class="heart">♥</text>Anime</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/register/register.html"><span class="glyphicon glyphicon-user"></span> Registrarse</a>
+                </li>
+                <li><a href="/login/login.html"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesión</a></li>
+            </ul>
+        </div>
+    </nav>
 
 
     <section id="register-dynamic-text">
-    <div class="wrapper">
-        <ul class="dynamic-text">
-            <li><h2><b>¡Crea tu cuenta!</b></h2></li>
-            <li><h2><b>Join the Community</b></h2></li>
-            <li><h2><b>アカウントを作成</b></h2></li>
-        </ul>
-    </div>
-</section>
+        <div class="wrapper">
+            <ul class="dynamic-text">
+                <li>
+                    <h2><b>¡Crea tu cuenta!</b></h2>
+                </li>
+                <li>
+                    <h2><b>Join the Community</b></h2>
+                </li>
+                <li>
+                    <h2><b>アカウントを作成</b></h2>
+                </li>
+            </ul>
+        </div>
+    </section>
     <main>
         <form id="form-registro">
             <div>
@@ -49,21 +61,23 @@
             </div>
             <div class="password-container">Confirmar Contraseña:
                 <input type="password" id="contrasena2" name="contrasena2" required placeholder="*********"
-                    oncopy="return false" oncut="return false" onpaste="return false" onselectstart="return false" noopener noreferrer>
+                    oncopy="return false" oncut="return false" onpaste="return false" onselectstart="return false"
+                    noopener noreferrer>
                 <button type="button" class="toggle-password" onclick="toggleBothPasswords(this)">👁️</button>
             </div>
             <div">
                 Ver y Ocultar las Contraseñas:
-            </div>
-            <br>
-            <br>
-            <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-            <div class="g-recaptcha" data-sitekey="6LchoHUrAAAAAG8-jLHTHZheY5djH-CXBu6yxGJw" required></div>
-            <br>
-            <h5> ya tienes cuenta? <a href="../login/login.html">Inicia Sesión</a></h5>
-            <br>
-            <button type="submit">
-                <h5 class="submitt" noopener noreferrer>Crear Cuenta</h5></button>
+                </div>
+                <br>
+                <br>
+                <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+                <div class="g-recaptcha" data-sitekey="6LchoHUrAAAAAG8-jLHTHZheY5djH-CXBu6yxGJw" required></div>
+                <br>
+                <h5> ya tienes cuenta? <a href="../login/login.html">Inicia Sesión</a></h5>
+                <br>
+                <button type="submit" class="button-box">
+                    <h5 class="submitt" noopener noreferrer>Crear Cuenta</h5>
+                </button>
         </form>
         <br>
     </main>
@@ -73,8 +87,5 @@
 <br>
 <br>
 <br>
-<footer>
-    <p> 2025 Mi Página de Anime. Todos los derechos reservados.</p>
-</footer>
 
 </html>
