--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="ultimo-anime" class="anime-ultimo-grid" oncopy="return false" oncut="return false"
         onpaste="return false" onselectstart="return false" noopener noreferrer>
         <div class="anime-ultimo" id="anime-ultimo">
-            <img src="/images/Make Heroine.png" alt="Make Heroine Ga Oosigiru">
+            <img src="images/Make Heroine.png" alt="Make Heroine Ga Oosigiru">
         </div>
         <div class="span-box">
             <h3 id="anime-upd" class="anime-name-updt">Make Heroine Ga Oosigiru</h3><b>Generos: </b>Escolar, Romance, Drama. <br><br>
